html/css_2/styles.css
/* ... */
.monero-code {
  margin-top: 0px;
  margin-bottom: 0px;
  font-family: 'Poppins', sans-serif !important;
  color: #8c959c;
  font-size: 12px;
  line-height: 22px;
  font-weight: 400;
  text-align: left; }

.help-text {
  color: #575e63;
  font-size: 13px;
  font-weight: 600; }

.info-div {
  margin-top: 22px;
  padding: 40px 28px;
  border: 1px solid #d3e1ed;
  border-radius: 3px;
  background-color: #fafdff;
  text-align: left; }

.bold {
  color: #5a6a6e;
  font-weight: 500; }
  .bold.red {
    color: #e65a5a; }

.table-btn {
  display: inline-block;
  margin-top: 15px;
  padding: 5px 14px;
  border: 1px solid #cfdce8;
  border-radius: 2px;
  background-color: transparent;
  font-family: 'Poppins', sans-serif !important;
  color: #bbbbbb;
  font-size: 12px;
  font-weight: 500;
  text-decoration: none; }
  .table-btn:hover {
    border-color: #40ce47;
    background-color: #40ce47;
    color: black; }
  .table-btn.right {
    margin-top: 18px;
    padding-top: 6px;
    float: right;
    border-radius: 3px; }
  .table-btn.left {
    margin-top: 18px;
    padding-top: 6px;
    float: left;
    border-radius: 3px; }

.lower-nav-section {
  padding-top: 15px;
    padding-bottom: 10px;
    border-bottom: 0px none #5891db;
    background-color: #292938;
    padding-left: 15px;
    height: 50px;
    border-radius: 10px; }

.lower-nav-link {
  display: inline-block;
  margin-right: 55px;
  font-family: 'Poppins', sans-serif !important;
  color: #fff;
  text-transform: capitalize;
  font-weight: 500; 
  text-decoration: none;
transition: 0.4s ease; }
  .lower-nav-link:hover {
    color: #40ce47;
    transform: scale(1.1);
   }
  .lower-nav-link:focus {
    display: inline;
    padding: 5px 14px;
    border-radius: 3px;
    background-color: white; }
  .lower-nav-link.w--current {
    display: inline;
    padding: 6px 11px;
    border-radius: 3px;
    background-color: #40ce47;
    color: #000; }
    .lower-nav-link.w--current:focus {
      background-color: transparent;
      color: green; }

.account-catchup-alert .w-form-done {
  background-color: #40ce47;
  margin-top: 20px;
color: #000; }

.dropdown-toggle {
  margin-top: 19px;
    padding: 3px 40px 3px 15px;
    border-radius: 7px;
    color: white;
    font-weight: 600; }
  .dropdown-toggle:hover {
    color: #008522;
    border-color: #008522; }

.middle-footer {
  position: static;
  text-align: left; }
  .middle-footer.social {
    display: block;
    text-align: center; }

.dropdown-styling {
  display: block;
  padding: 14px 30px;
  border-radius: 0px;
  background-color: #292938;
  color: #fff;
  font-size: 14px;
  font-weight: 500; }
  .dropdown-styling:hover {
    background-color: white;
    color: #008522;
    text-decoration: none; }
  .dropdown-styling.top {
    padding-top: 18px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    background-color: #40ce47;
    font-size: 14px;
    color: #000; }
  .dropdown-styling.bottom {
    padding-bottom: 18px;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px; }
    .dropdown-styling.bottom:hover {
      background-color: white; }

.dropdown-rounded.w--open {
  display: block;
    margin-top: 14px;
    margin-left: 0px;
    border: 1px solid #4c5358;
    border-radius: 3px;
    background-color: #e9f0f5;
    box-shadow: none;
    opacity: 1;
    color: #535f69;
    font-size: 13px;
    font-weight: 500;
    text-align: justify; }

.arrow-icon-style {
  display: inline-block;
  margin-right: 15px;
  padding-right: 0px;
  padding-left: 0px; }

.review-details-modal {
  position: fixed;
  overflow: scroll;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  z-index: 1001;
  display: none;
  margin-right: 0px;
  margin-left: 0px;
  padding: 60px 15px;
  background-color: rgba(43, 50, 56, 0.85); }

/*
.review-details-container {
  overflow-y: scroll;
  height: 100%;
}
*/
.review-details-div {
  overflow-y: scroll;
  height: 100%;
  margin-right: 80px;
  margin-left: 80px;
  padding: 10px 40px 25px;
  border-radius: 2px;
  background-color: #292938 !important;}

.review-text {
  font-family: 'Poppins', sans-serif !important;
  color: #fff; }

.review-text.address {
    font-size: 12px; }

.review-account-details {
  position: fixed;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  z-index: 1001;
  display: none;
  padding: 60px 15px;
  background-color: rgba(43, 50, 56, 0.85); }

.support-heading {
  padding-top: 15px;
    padding-bottom: 15px;
    background-color: #292938;
    color: #fff;
    border-radius: 10px;
    margin-top: 30px;
  }

.uppercase-link {
  text-transform: uppercase;
  color: #40ce47;
  text-decoration: none;
  }
  .uppercase-link:hover {
    color: #00263a; }

.coloured {
    padding-top: 35px;
    padding-bottom: 15px;
    background-color: #292938;
    border-radius: 15px;
    padding: 30px 30px;
    margin-top: 30px;
   }

.slider-heading {
  color: #fff;
font-size: 30px; }

.img-icon {
  margin-right: 52px;
  margin-bottom: 40px;
  margin-left: 52px;
  float: none;
  text-align: center; }

.header-section {
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 10px; 
  }

.home-header {
  text-transform: uppercase;
    color: white;
    font-size: 24px;
    line-height: 34px;
    font-weight: 600;
    text-align: left;
    padding-top: 100px;
    position: relative;
}

.create-account-btn {
  display: inline-block;
    margin-top: 10px;
    min-width: 200px;
    height: 45px;
    padding: 14px;
    border-radius: 7px;
    background-color: #1eb10b;
    font-family: 'Poppins', sans-serif !important;
    color: #1a1a1a;
    font-size: 18px;
    font-weight: 500;
    text-align: center;
    text-decoration: none;
    transition: 0.4s ease;
}

  .create-account-btn:hover {
    background-color: #1182f7;
    color: black;
    transform: scale(1.1);
  }

.home-container {
  text-align: center; }
/* ... */

